--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "ejs-mate": "^4.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.1.0",
+    "sequelize": "^6.28.0",
+    "uuid": "^9.0.0",
+    "ws": "^8.12.0"
   }
 }
