--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "mysql2": "^3.1.0",
+    "resize-image": "^0.1.0",
     "sequelize": "^6.28.0",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0",
     "ws": "^8.12.0"
   }
