--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.1.0",
     "resize-image": "^0.1.0",
     "sequelize": "^6.28.0",
+    "sequelize-hierarchy": "^2.0.4",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0",
     "ws": "^8.12.0"
