--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "resize-image": "^0.1.0",
     "sequelize": "^6.28.0",
     "sequelize-hierarchy": "^2.0.4",
+    "sequelize-hierarchy-next": "^1.0.0",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0",
     "ws": "^8.12.0"
